--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    Home
+    Landing
+    <a href="/login">Login</a>
+    <a href="/register">Register</a>
   </body>
 </html>
